objects/Agreement_To_Account_Sync_Status__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement To Account Sync Status</relationshipLabel>
        <relationshipName>Agreement_To_Account_Sync_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sync_Error_Message__c</fullName>
        <label>Sync Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sync_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upsert_Reference__c</fullName>
        <externalId>true</externalId>
        <label>Upsert Reference</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Agreement To Account Sync Status</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement To Account Sync Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>